--- a/src/main/resources/Templates/index.html
+++ b/src/main/resources/Templates/index.html
@@ -253,7 +253,7 @@ ul {
 li:before {
   vertical-align: 16%;
   font-size: 16px;
-  content: "\25a2";  /*"\2b24"*/  /*"\25a2"*/ /*"\2714"*/ /*"\1F79B"*/   
+  content: "\25a2";   
   color: #00ff5d;
   display: inline-block;
   margin-left: 22px;
@@ -319,11 +319,10 @@ li:before {
               <li>Te ayudo a cumplir tus objetivos.</li>
               <li>Realiza ejercicio dónde y cuándo quieras.</li>
               <li>Entrenamientos adaptativos y personalizados.</li>
-              <li>Mira tu progresión mediante gráficas detalladas.</li>
-              <!-- <li>Amplio catálogo de ejercicios para realizar.</li> -->
+              <li>Amplia lista de ejercicios para entrenar.</li>
+              <li>Consulta las mejores recetas para tu nutrición.</li>
             </ul>
           </div>
-          <a href="#" class="secondary-btn">Infórmate sobre las ofertas GFHome.</a>
         </div>
       </div>
     </div>
@@ -332,7 +331,7 @@ li:before {
         <div class="logo">
           <img src="" alt="Sluralpright"/>
         </div>
-        <form action = "#" th:action="@{/}" th:object="${usuario}" method="post">
+        <form action = "#" th:action="@{/loginOK}" th:object="${usuario}" method="post">
           <!-- <div class="inputs"> -->
             <div>
               <label>Email de usuario:</label>
