--- a/src/main/resources/Templates/menuCliente.html
+++ b/src/main/resources/Templates/menuCliente.html
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background: url(Imagenes/8.jpg) no-repeat;
+    background: url(Imagenes/3.jpg) no-repeat;
     background-size: 100%;
 }
 
@@ -60,7 +60,7 @@
 .container .card a:hover .face.face2{
     transform: translateY(0);
     color: #f0f0f0;
-    background: rgb(0 0 0 / 85%);
+    background: rgb(0 0 0 / 90%);
     border-radius: 0 0 16px 16px;
 }
 
@@ -73,7 +73,7 @@
 .container .card .face.face1 {
     border-radius: 16px;
     position: relative;
-    background: rgb(0 0 0 / 85%);
+    background: rgb(0 0 0 / 90%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -144,11 +144,11 @@
 </head>
 <body>
     <div class="saludo">
-        <p>Bienvend@ <strong th:text="${usuarioSaludo.nombre}"></strong> . ! Empecemos el entrenamiento !</p>
+        <p>Bienvenida <strong th:text="${usuarioSaludo.nombre}"></strong>. ! Empecemos el entrenamiento !</p>
     </div>
     <div class="container">
         <div class="card">
-            <a href="/info">
+            <a th:href="@{/verPerfil/{id}(id=${usuarioSaludo.id})}">
                 <div class="face face1">
                     <div class="content">
                         <span class="material-icons"> person </span>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Descubre las recetas fitness más ricas, saludables y nutritivas para ayudarte a conseguir tu cambio deseado.</p>
+                        <p>Descubre y disfruta las recetas fitness más ricas, saludables y nutritivas.</p>
                     </div>
                 </div>
             </a>
