--- a/src/main/resources/Templates/menuEntrenador.html
+++ b/src/main/resources/Templates/menuEntrenador.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Consulta toda la información de tus clientes; Datos personales, creación-edición y borrado de tablas, etc.</p>
+                        <p>Información de tus clientes: Datos personales, tablas (creación, edición y borrado).</p>
                     </div>
                 </div>
             </a>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Consulta los mejores ejercicios a realizar ordenados por grupo muscular.</p>
+                        <p>Consulta los mejores ejercicios para tu entrenamiento ordenados por grupo muscular.</p>
                     </div>
                 </div>
             </a>
